# rouge-like-galgame

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
docs/: AIGC课程小组作业答辩PPT.md  phantom-seed-course-report.typ  phantom-seed-references.bib
docs/report/: .gitignore  report.tex
docs/slidev-app/: package-lock.json  package.json  pnpm-lock.yaml  slides.md  style.css
src/phantom_seed/: __init__.py  config.py  main.py
src/phantom_seed/ai/: gemini_client.py  imagen_client.py  llm.py  prompts.py  protocol.py
src/phantom_seed/ai/chains/: character_chain.py  scene_chain.py
src/phantom_seed/ai/prompts/: __init__.py  character.py  scene.py  system.py  visual.py
src/phantom_seed/core/: coordinator.py  roguelike.py  save_system.py  seed_engine.py  state.py
src/phantom_seed/pipeline/: async_gen.py
src/phantom_seed/ui/: assets.py  dialogue.py  engine.py  fonts.py  hud.py  main_menu.py  menu.py  save_menu.py  scene.py  settings_menu.py  transitions.py
src/phantom_seed/utils/: __init__.py  io.py
tests/: test_async_pipeline.py  test_save_data.py  test_scene_chain_agent.py  test_utils_io.py
